--- a/frontend/src/components/Chatbot.module.css
+++ b/frontend/src/components/Chatbot.module.css
@@ -29,9 +29,10 @@
   width: 100%;
   max-width: 100%;
   display: flex;
+  height:100%;
   flex-direction: column;
   background-color: var(--bg-main);
-  box-shadow: 0 5px 20px var(--shadow-color); /* Softer, slightly larger shadow */
+  box-shadow: 0 5px 20px var(--shadow-color); 
   overflow: hidden;
 }
 
